# metric

./: .gitignore  README.md  metric.cabal
Data/: Metric.hs  Metric.lhs
nix/: default.nix  paths.nix
src/Control/Applicative/: Extras.hs
src/Data/: Metric.hs  Metric.lhs  Premetric.lhs  Semimetric.lhs
src/Data/Default/Instances/: EditDistance.lhs
src/Data/Function/: Extras.hs
src/Data/List/: Extras.lhs
src/Data/Metric/: Class.lhs  Set.lhs  String.lhs
src/Data/Metric/Vector/: Real.lhs
src/Data/Packed/Matrix/: Extras.hs
src/Data/Vector/: Extras.hs
test/: Main.hs
test/Numeric/: Approximate.hs  Approximate.lhs
test/Test/QuickCheck/Property/: Metric.lhs
