name:                metric
version:             0.1.1
synopsis:            Distance functions.
license:             MIT
license-file:        LICENSE
author:              Vikram Verma
maintainer:          me@vikramverma.com
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Data.Metric
  build-depends:       base ==4.6.*, vector ==0.10.*
