name:                metric
version:             0.1.3
synopsis:            Distance functions.
license:             MIT
license-file:        LICENSE
author:              Vikram Verma
maintainer:          me@vikramverma.com
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:   Data.Metric
  hs-source-dirs:    src
  build-depends:     base, vector, hmatrix

test-suite metric-tests:
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  hs-source-dirs:    test
  build-depends:     base, vector, metric, QuickCheck, test-framework, test-framework-quickcheck2
